--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,5 @@
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Survey</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_slideshow">Profile</string>
 </resources>
