--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Survey</string>
     <string name="menu_slideshow">Profile</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
