--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
+    <string name="menu_home">Public</string>
     <string name="menu_gallery">Survey</string>
     <string name="menu_slideshow">Profile</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
