fixed bugs and upgrade public page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="menu_cesko"> ცესკო </string>
     <string name="menu_elections"> არჩევნები </string>
     <string name="menu_vocabulary"> ლექსიკონი </string>
-    <string name="menu_theme"> თემა </string>
+    <string name="menu_theme"> თემის შეცვლა </string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
